Changes the invitations migration and model. Adds policies to bugs, attachments, comments and screenshots. Adds further code improvements
