# app/Http/Controllers/CompanyController.php
@@ -3,28 +3,26 @@
 namespace App\Http\Controllers;
 
 // Miscellaneous, Helpers, ...
-use Illuminate\Support\Str;
 use Illuminate\Support\Facades\Auth;
 use Illuminate\Http\Request;
 
 // Resources
 use App\Http\Resources\CompanyResource;
-use App\Http\Resources\ProjectResource;
 use App\Http\Resources\ImageResource;
 use App\Http\Resources\InvitationResource;
 use App\Http\Resources\CompanyUserRoleResource;
 
 // Services
 use App\Services\ImageService;
+use App\Services\InvitationService;
 
 // Models
 use App\Models\Company;
-use App\Models\Image;
 use App\Models\CompanyUserRole;
 
 // Requests
 use App\Http\Requests\CompanyRequest;
-use App\Http\Requests\CompanyInviteRequest;
+use App\Http\Requests\InvitationRequest;
 
 /**
  * @OA\Tag(
@@ -114,7 +112,7 @@ class CompanyController extends Controller
                 ["companies.updated_at", ">", date("Y-m-d H:i:s", $request->timestamp)]
             ]);
         }
-
+		
 		return CompanyResource::collection($companies);
 	}
 
@@ -187,11 +185,7 @@ class CompanyController extends Controller
 	public function store(CompanyRequest $request, ImageService $imageService)
 	{	
 		// Check if the the request already contains a UUID for the company
-        if($request->id == NULL) {
-            $id = (string) Str::uuid();
-        } else {
-            $id = $request->id;
-        }
+		$id = $this->setId($request);
 
 		// Store the new company in the database
 		$company = Company::create([
@@ -463,6 +457,11 @@ class CompanyController extends Controller
 			"deleted_at" => new \DateTime()
 		]);
 		
+		// Delete the respective image
+		$company->image->update([
+			"deleted_at" => new \DateTime()
+		]);
+
 		return response($val, 204);
 	}
 
@@ -606,10 +605,9 @@ class CompanyController extends Controller
 	 *          mediaType="application/json",
 	 *          @OA\Schema(
 	 *              @OA\Property(
-	 *                  description="The invited user id.",
-	 *                  property="target_id",
-	 *					type="integer",
-	 *                  format="int64",
+	 *                  description="The invited user email.",
+	 *                  property="target_email",
+	 *					type="string"
 	 *              ),
 	 *              @OA\Property(
 	 *                  description="The invited user role.",
@@ -651,12 +649,12 @@ class CompanyController extends Controller
 	 *	),
 	 * )
 	 **/
-	public function invite(Company $company, CompanyInviteRequest $request)
+	public function invite(InvitationRequest $request, Company $company, InvitationService $invitationService)
 	{
-		$inputs = $request->all();
-		$inputs['sender_id'] = Auth::id();
-		$inputs['status_id'] = 1;
+		$id = $this->setId($request);
 
-		return new InvitationResource($company->invitations()->create($inputs));
+		$invitation = $invitationService->send($request, $company, $id);
+
+		return new InvitationResource($invitation);
 	}
 }
